Fix horizontal scrolling bug

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -95,7 +95,7 @@ header {
 main {
     grid-column: 1 / 3;
     grid-row: 2 / 4;
-    margin: 10px 10px 0 10px;
+    margin: 10px 10px 0 0;
 }
 
 aside {
@@ -344,5 +344,13 @@ td {
 @media only screen and (max-width: 320px){
     table {
         width: 300px;
+    }
+
+    #about aside {
+        width: 315px;
+    }
+
+    #about * img {
+        width: 90%;
     }
 }
